changes to index file

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div class="row">
       <div class="col-md-4">
         <article>
-          <a target="_blank" href="Temperature.html">
+          <a href="Temperature.html">
           <img src="assets/Lat_v_Temp.png" alt="Latitude vs Temp" width ="80%">
           </a>
         </article>
